--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@visx/group": "^3.3.0",
+    "@visx/heatmap": "^3.3.0",
+    "@visx/scale": "^3.3.0",
+    "figlet": "^1.6.0",
     "next": "13.4.12",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-resize-detector": "^9.1.0"
+  },
+  "devDependencies": {
+    "sass": "^1.64.2"
   }
 }
