I been looking through the photo album ~ df

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@visx/heatmap": "^3.3.0",
     "@visx/scale": "^3.3.0",
     "figlet": "^1.6.0",
+    "framer-motion": "^10.15.0",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
