I'm going to fall asleep

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@supabase/supabase-js": "^2.31.0",
         "figlet": "^1.6.0",
         "framer-motion": "^10.15.0",
         "next": "13.4.12",
