I wanna run away

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "next": "13.4.12",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "react-resize-detector": "^9.1.0"
+        "react-resize-detector": "^9.1.0",
+        "showdown": "^2.1.0"
     },
     "devDependencies": {
         "prettier": "^3.0.0",
